--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <img src="images/html-5.png" alt="HTML5" title="HTML">
             <img src="images\css-2.svg" alt="CSS3" title="CSS">
             <img src="images/javascript.svg" alt="Javascript" title="Javascript">
-            <img src="/images/bootstrap.svg" alt="Bootstrap" title="Bootstrap">
+            <img src="images/vuejs.png" alt="HTML5" title="Vue JS">
             <img src="images\nodelogo.png" alt="node" title="node" id="node">
             
         </div>
@@ -149,7 +149,7 @@
             <img src="/images/wordpress-icon.svg" alt="WordPress" data-title="WordPress">
             <img src="/images/github-icon.svg" alt="Github" title="Github">
             <img src="/images/figma.svg" alt="figma" id="figma" title="figma">
-            <img src="/images/visual-studio-code.svg" alt="Visual Studio Code" title="Visual Studio Code">
+            <img src="/images/bootstrap.svg" alt="Bootstrap" title="Bootstrap">
             <img src="/images/netlify.svg" alt="netlify" title="Netlify">
         </div>
     </div>
@@ -217,6 +217,27 @@
 
     <hr class="divider-line">
 
+    <!-- tgwd -->
+
+    
+<div class="project1">
+    <div class="projectOneLeft">
+    <img src="images\tag(3).png" alt="computer-screen Tag Web Dev">
+        </div>
+            <div class="projectOneRight">
+                    <h2>Tag Web Development</h2>
+                    <br>
+                    <p>Statically generated agency site built with Vue JS, Gridsome, and Boostrap-Vue. Hosted on Netlify.</p>  
+                    <a href="https://tgwd.netlify.com/" class="project-live" target="blank">Live Site</a>
+                    <span><a href="https://github.com/treyg/tag-web-dev"class="project-live" target="blank">code</a></span>
+                </div>
+</div>
+
+<hr class="divider-line">
+
+
+<!-- simpler shopper -->
+
 <div class="project1">
     <div class="projectOneLeft">
     <img src="images\shopcomp.png" alt="computer-screen simple shopper app">
@@ -233,18 +254,21 @@
 <hr class="divider-line">
 
 
+
+
 <!-- Project 3 - JS -->
 
 <div class="project1" id="last-project">
         <div class="projectOneLeft">
-        <img src="images\speedtyperproject1.png" alt="computer-screen Javascript speed typer">
+        <img src="images\GR-Events.png" alt="computer-screen GR Events">
             </div>
                 <div class="projectOneRight">
-                        <h2>Javascript Speed Typer</h2>
+                        <h2>Grand Rapids Events (in development)</h2>
                         <br>
-                        <p>Speed typing game using English and Pali words, built using vanilla javascript and Bootstrap for styling.</p>  
-                        <a href="https://js-speed-typer.netlify.com/" class="project-live" target="blank">Live Site</a>
-                        <span><a href="https://github.com/treyg/speed-typer"class="project-live" target="blank">code</a></span>
+                        <p>Local events app for Grand Rapids. Users can filter and search upcoming results and upload custom events. Built with Vue JS and Bootstrap-Vue.
+                             User submitted events are uploaded to headless WordPress using the WP rest API.</p>  
+                        <a href="https://grshows.netlify.app/" class="project-live" target="blank">Live Site</a>
+                        <span><a href="https://github.com/treyg/shows-tonight"class="project-live" target="blank">code</a></span>
                     </div>
     </div>
 
