update link for tag

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <h2>Tag Web Development</h2>
                     <br>
                     <p>Statically generated agency site built with Vue JS, Gridsome, and Boostrap-Vue. Hosted on Netlify.</p>  
-                    <a href="https://tgwd.netlify.com/" class="project-live" target="blank">Live Site</a>
+                    <a href="https://tagwebdev.io/" class="project-live" target="blank">Live Site</a>
                     <span><a href="https://github.com/treyg/tag-web-dev"class="project-live" target="blank">code</a></span>
                 </div>
 </div>
