remove google analytics

--- a/index.html
+++ b/index.html
@@ -2,17 +2,7 @@
 <html lang="en">
 
 <head>
-   <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127315011-2"></script>
-   <script>
-      window.dataLayer = window.dataLayer || [];
-
-      function gtag() {
-         dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-      gtag('config', 'UA-127315011-2');
-   </script>
+   <script defer data-domain="treygordon.com" src="https://plausible.tagweb.dev/js/script.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.10.0/rellax.min.js"></script>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
