swap plausible for umami

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-   <script defer data-domain="treygordon.com" src="https://plausible.tagweb.dev/js/script.js"></script>
+   <script defer src="https://umami.tagweb.dev/script.js" data-website-id="c2fad4e5-f9bf-48c8-affa-9c2e400bd6d2"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.10.0/rellax.min.js"></script>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
